@@ -3,6 +3,7 @@
 o Adds UNWIND
 o Fixes problem where predicates are evaluated wrongly in NOT
 o Fixes problem when WITH introduces a symbol that shadows an existing identifier
+o Adds support for Octal literals (using a preceding 0, e.g. 03517)
 
 2.0.3
 -----
